Clean up a few warnings